# TaskBoard

./: CMakeLists.txt  Data.json  Task.qml  TaskColumn.qml  TaskColumnContent.qml  TaskContent.qml  TaskContentEditDialog.qml  TasksModel.qml  data.js  fileio.h  main.cpp  main.qml  qml.qrc  taskBoard.pro
example/: main.qml
src/: CMakeLists.txt  qml.qrc
src/code/: fileio.cpp
src/controls/: NoTaskPlaceholder.qml  Task.qml  TaskColumn.qml  TaskContentEditDialog.qml
